--- a/index.html
+++ b/index.html
@@ -260,20 +260,13 @@
           </h2>
         </blockquote> -->        
         <p>
-          I am a Computer Science Grad Student at Arizona State University. I enjoy problem-solving and coding. Always strive to bring 100% to the work I do.
-
-          I have worked on technologies like Python, Django, Flask, MySQL, PostgreSQL, MongoDB, HTML5, CSS, Java, C++ during my bachelor's. I have 19 months of professional work experience which helped me strengthen my experience in Python, Flask, and Django.
-
-          I am passionate about developing complex applications that solve real-world problems impacting millions of users.
-        </p>
-        <p>
-          <ul>
-            <li><b>Languages:</b> Python, Java, JavaScript, C, C++, HTML/CSS, Bash</li>
-            <li><b>Databases:</b> MySQL, PostgreSQL, MongoDB</li>
-            <li><b>Libraries:</b> NumPy, Pandas, OpenCV</li>
-            <li><b>Frameworks:</b> Flask, Django, Node.js, Keras, TensorFlow, PyTorch, Bootstrap, Apache Beam</li>
-            <li><b>Tools & Technologies:</b> Git, Docker, AWS, GCP, Heroku, JIRA</li>
-          </ul>
+			I am a translation and interpreting graduate of Istanbul University. I have always been
+			passionate about conveying the source message in another language, being a cultural
+			mediator and helping to transmit the knowledge across receivers. In order to achieve my goal,
+			I always try to update my world knowledge and learn the jargon of different professions. My
+			main area of expertise is Law. Besides, I am one of the 10 students that succeeded to take the
+			Simultaneous Interpreting class. Currently, I am looking for an opportunity to develop and fully
+			utilise my employability skills for my career.
           
         </p>
           
