--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
   <!-- Custom Styles-->
   <link rel="stylesheet" href="/assets/css/style.css" />
-  <title>Varad Bhogayata | Software Developer</title>
+  <title>Nafiye Mercan | Translator and Interpreter</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126939217-2"></script>
@@ -35,10 +35,10 @@
   <!-- Open Graph-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Varad Bhogayata | Software Developer" />
-  <meta property="og:description" content="Software Developer" />
+  <meta property="og:title" content="Nafiye Mercan | Translator and Interpreter" />
+  <meta property="og:description" content="Translator and Interpreter" />
   <meta property="og:url" content="https://varadbhogayata.github.io/" />
-  <meta property="og:site_name" content="Varad Bhogayata | Software Developer" />
+  <meta property="og:site_name" content="Nafiye Mercan | Translator and Interpreter" />
   <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
   <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
   <!-- Twitter -->
@@ -158,8 +158,7 @@
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
       class="button-collapse"><i class="mdi-navigation-menu"></i></a>
     <div class="name-title">
-      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Varad
-        Bhogayata</a><span class="black-text">Software Developer</span>
+      <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Nafiye Mercan</a><span class="black-text">Translator and Interpreter</span>
     </div>
   </nav>
 
@@ -215,14 +214,9 @@
               <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
-              <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <a href="https://www.linkedin.com/in/nafiyemercan/" target="_blank">
                 <button class="icon-btn linkedin">
                   <i class="fa fa-linkedin"></i>
-                </button>
-              </a>
-              <a href="https://github.com/varadbhogayata/" target="_blank">
-                <button class="icon-btn github">
-                  <i class="fa fa-github"></i>
                 </button>
               </a>
 
@@ -274,9 +268,6 @@
           
           Detail-oriented Software Developer with professional experience in Backend Development, Machine Learning, Computer Vision. I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision.           
         </p> -->
-        <p>
-          Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.
-        </p>
         <!-- <p>
           Another Paragraph
         </p>  -->
@@ -309,28 +300,26 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://www.zhiffy.com/" target="_blank"
-                      class="teal-text hoverline">Zhiffy</a></span>
+                      class="teal-text hoverline">Istanbul University Translation and Interpreting Department</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
             <ul>
               <li>
-                Developed and managed the backend of an e-commerce platform using Flask, MongoDB, and AWS.
+                Attended a total of 14 seminars about the translation industry, localization, Computer
+				Aided Translation Tools, the translator’s role in the publishing business which were all
+				conducted by the professionals in the field.
               </li>
               <li>
-                Worked on three web applications targeting customers, selling vendors, and admin users; built 50+ RESTful APIs with functionalities
-such as login/sign up, view a product, add a product to cart, checkout the order, etc.
+                Learned how to use CAT Tools such as SDL Trados and Memsource through translation
+workshops and hands-on demonstrations.
               </li>
-              <li>Improved the response time by 20% by refactoring the codebase and changing database design and queries.</li>
-              <li>Added a bulk upload feature which reduced the manual work of adding products into a database.</li>
-              <li>
-                <b>Tools:</b> Python, Flask, MongoDB
-              </li>
+              <li>Gained awareness about this professions’ ethical values and the professionalization
+process.</li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2020 - Nov 2020 | Hyderabad, India</span>
+            <span>2-28 July 2020 | Istanbul, Turkey</span>
           </div>
         </div>
 
@@ -992,11 +981,11 @@ of each drug container to estimate the degradation of the drug.
               target="_blank">github.com/varadbhogayata</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata" target="_blank"
+          <a aria-label="View Varad on LinkedIn" href="https://www.linkedin.com/in/nafiyemercan/" target="_blank"
             data-position="top" data-tooltip="View Varad on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="http://linkedin.com/in/varadbhogayata"
-              class="hoverline" target="_blank">linkedin.com/in/varadbhogayata</a></a>
+              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/nafiyemercan/"
+              class="hoverline" target="_blank">linkedin.com/in/nafiyemercan</a></a>
         </p>
       </div>
     </section>
