--- a/index.html
+++ b/index.html
@@ -335,33 +335,34 @@ process.</li>
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="http://meditab.com" target="_blank"
-                      class="teal-text hoverline">Meditab</a></span>
+                      class="teal-text hoverline">Present:</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Programmer Analyst</div>
+            <div class="role brown-text text-darken-2">Freelance Translator</div>
             <ul>
               <li>
-                Customized a tree-based optimization algorithm that separates drugs into distinct groups to maximize the concurrent execution of drug
-dispenser robots; improved an optimization algorithm that reduced the cycle-time of the automation process by 25%.
+                Translated an 11-page article in the field of psychology called “COVID-19 and Child
+Psychology” from Turkish into English.
               </li>
               <li>
-                Devised a customized recursion algorithm to extend the functionality of the current environment to a multi-robot and multi-system
-environment
+                Translated a 15-page article written in the field of Special Education from Turkish into
+English. The article was published on the Journal of Education Studies platform.
               </li>
               <li>
-                Built a modular video analytics app using Flask, OpenCV that tracks the location of each human in a multi-camera environment;
-utilized perspective transformation, object detection, and object tracking to find the location of a human.
+                Translated of a 20-page article titled "Zihin Yetersizliği Olan Öğrencilerin Okuduğunu
+Anlama Sürecinde Kullanılan Öğretmen Uygulamalarının İncelenmesi" from Turkish to English.
               </li>
-              <li>Increased the speed of the video analytics app by 20% by using a customized YOLOv3 algorithm to perform object detection and
-                DeepSORT algorithm for multi-object tracking.</li>
+              <li>Proof-read a 12-page article in the field of Psychology called “Construction of
+Masculinity Through Body-Building: A Qualitative Study”.</li>
               <li>
-                <b>Tools:</b> Python, Flask, OpenCV, Keras, Tensorflow, PyTorch
+                Translated a 13 page article which was written in the field of Special Education, in the
+Turkish – English language pair.	
               </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>Dec 2018 - July 2019 | Ahmedabad, India</span>
+            <span>November 2020 – January 2021</span>
           </div>
         </div>
 
@@ -758,52 +759,40 @@ of each drug container to estimate the degradation of the drug.
         <!-- Languages and Databases -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Languages and Databases</h4>
+            <h4 class="brown-text light">Technical Skills</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />SDL Trados (proficient)
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />Smartcat (highly proficient)
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
-              </div>
+                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />Memsource (proficient)
             </div>
           </div>
         </div>
 
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Libraries</h4>
+            <h4 class="brown-text light">Languages</h4>
             <div class="row text-center">
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />Turkish (Native)
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />English (Native Fluency)
+
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />German (Beginner Level)
               </div>
               <div class="col s4 m2">
-                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
-              </div>
-              <div class="col s4 m2">
-                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
-              </div>
+                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />French (Beginner Level)
             </div>
           </div>
         </div>
+		</div>
 
         <!-- Frameworks -->
         <div class="card">
@@ -995,7 +984,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "Developer", "Fast Learner"],
+      strings: ["Organized", "Quick Learner", "Excellent Communicator", "Team Player", "Analytical"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
