--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Nafiye Mercan | Translator and Interpreter" />
   <meta property="og:description" content="Translator and Interpreter" />
-  <meta property="og:url" content="https://varadbhogayata.github.io/" />
+  <meta property="og:url" content="https://Nafiyebhogayata.github.io/" />
   <meta property="og:site_name" content="Nafiye Mercan | Translator and Interpreter" />
-  <meta property="article:publisher" content="https://varadbhogayata.github.io/" />
-  <meta property="og:image" content="https://varadbhogayata.github.io/examples/preview.JPG" />
+  <meta property="article:publisher" content="https://Nafiyebhogayata.github.io/" />
+  <meta property="og:image" content="https://Nafiyebhogayata.github.io/examples/preview.JPG" />
   <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@varad_bhogayata" />
+  <meta name="twitter:site" content="@Nafiye_bhogayata" />
   <meta name="twitter:title" content="Coder | Technofreak | Explorer | Minimalist | Humane" />
   <meta name="twitter:description" content="Software Developer" />
-  <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
-  <meta name="author" content="Varad Bhogayata" />
+  <meta name="twitter:url" content="https://twitter.com/Nafiye_bhogayata" />
+  <meta name="author" content="Nafiye Bhogayata" />
   <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/assets/img/favicon/apple-icon-60x60.png" />
@@ -144,10 +144,10 @@
         4. mdi-file-attachment
         5. mdi-file-folder-shared
         -->
-        <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
+        <!-- <a aria-label="Open Nafiye's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Varad's resume in a new tab" href="https://varadbhogayata.github.io/assets/resume/Varad_Bhogayata_Resume.pdf" target="_blank"
+        <a aria-label="Open Nafiye's resume in a new tab" href="https://Nafiyebhogayata.github.io/assets/resume/Nafiye_Bhogayata_Resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -192,7 +192,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open Nafiye's Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -211,7 +211,7 @@
               <h2>Hi, I'm <span class="teal">Nafiye Mercan.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Self-driven, quick starter, passionate programmer with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
+              <h5>Passionate translator and interpreter with a curious mind who enjoys solving a complex and challenging real-world problems.</h5>
             </div>
             <div class="social">
               <a href="https://www.linkedin.com/in/nafiyemercan/" target="_blank">
@@ -220,13 +220,13 @@
                 </button>
               </a>
 
-              <!-- <a href="https://angel.co/u/varad_bhogayata" target="_blank">
+              <!-- <a href="https://angel.co/u/Nafiye_bhogayata" target="_blank">
                 <button class="icon-btn angellist">
                   <i class="fa fa-angellist"></i>
                 </button>
               </a> -->
 
-              <!-- <a href="http://linkedin.com/in/varadbhogayata" target="_blank">
+              <!-- <a href="http://linkedin.com/in/Nafiyebhogayata" target="_blank">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -258,8 +258,7 @@
 			passionate about conveying the source message in another language, being a cultural
 			mediator and helping to transmit the knowledge across receivers. In order to achieve my goal,
 			I always try to update my world knowledge and learn the jargon of different professions. My
-			main area of expertise is Law. Besides, I am one of the 10 students that succeeded to take the
-			Simultaneous Interpreting class. Currently, I am looking for an opportunity to develop and fully
+			main area of expertise is Law. Currently, I am looking for an opportunity to develop and fully
 			utilise my employability skills for my career.
           
         </p>
@@ -322,8 +321,43 @@ process.</li>
             <span>2-28 July 2020 | Istanbul, Turkey</span>
           </div>
         </div>
+		
+		        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="https://www.meditab.com" target="_blank"><img alt="Meditab logo"
+                    src="/assets/img/exp-meditab-logo-500x500.jpg" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="http://meditab.com" target="_blank"
+                      class="teal-text hoverline"></a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Translator at Ketebe Book ve Magazine Publishing Inc.</div>
+            <ul>
+              <li>
+                Translated a 254 page book in the field of philosophy written by Peter Gibson called
+“A Short History of Philosophy”.
+              </li>
+              <li>
+                Gained a depth insight regarding philosophy and enhanced my terminology knowledge
+in this specific field.
+              </li>
+              <li>
+                Implemented different translation strategies to preserve the meaning and convey the
+message in the target language.
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>November 2020 – January 2021</span>
+          </div>
+        </div>
 
-        
         <div class="card">
           <div class="card-content">
             <div class="row">
@@ -362,7 +396,7 @@ Turkish – English language pair.
             </ul>
           </div>
           <div class="card-action">
-            <span>November 2020 – January 2021</span>
+            <span>September 2019 - Present</span>
           </div>
         </div>
 
@@ -378,27 +412,31 @@ Turkish – English language pair.
               <!-- <div class="col s12 m10"> -->
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Mtag
-                      Innovations</a></span>
+                  <span class="card-title"><a href="#experience" class="teal-text hoverline">Volunteer Translator</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Developer</div>
+            <div class="role brown-text text-darken-2">Çevir Women Blog</div>
             <ul>
               <li>
-                Programmed a cloud-based web app using Flask and JavaScript aimed at storing, visualizing, and tracking temperature and humidity
-of each drug container to estimate the degradation of the drug.
+                A member of an organisation whose aim is to gather female translator candidates
+together and give them a chance to create new contents in various areas such as news,
+health, art and translate texts in these fields.
               </li>
               <li>
-                Created an alert system to send notifications and emails when the parameters exceed the threshold.
+                Translated texts in psychology and news areas.
               </li>
               <li>
-                <b>Tools:</b> Python, Flask, JavaScript
+				Built stronger relationships between my fellows and produced new content by
+exchanging information with others.
               </li>
+			  <li>
+			  Realised the significance of female empowerment.
+			  </li>
             </ul>
           </div>
           <div class="card-action">
-            <span>July 2018 - Nov 2018 | Ahmedabad, India</span>
+            <span>November 2020 – Present</span>
           </div>
         </div>
 
@@ -480,7 +518,7 @@ of each drug container to estimate the degradation of the drug.
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/music-player"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Nafiyebhogayata/music-player"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -517,7 +555,7 @@ of each drug container to estimate the degradation of the drug.
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/QuizUp"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Nafiyebhogayata/QuizUp"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -554,7 +592,7 @@ of each drug container to estimate the degradation of the drug.
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/django-local-library"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Nafiyebhogayata/django-local-library"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -594,7 +632,7 @@ of each drug container to estimate the degradation of the drug.
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/flask-blog"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Nafiyebhogayata/flask-blog"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -631,7 +669,7 @@ of each drug container to estimate the degradation of the drug.
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
+                    href="https://github.com/Nafiyebhogayata/visual-question-answering" target="_blank"
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -668,7 +706,7 @@ of each drug container to estimate the degradation of the drug.
                 </ul>
                 <!-- TODO: UPLOAD THIS PROJECT ON GITHUB -->
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Nafiyebhogayata/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -703,7 +741,7 @@ of each drug container to estimate the degradation of the drug.
 
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/"
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/Nafiyebhogayata/"
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -738,7 +776,7 @@ of each drug container to estimate the degradation of the drug.
                 </ul>
                 <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project"
-                    href="https://github.com/varadbhogayata/visual-question-answering" target="_blank"
+                    href="https://github.com/Nafiyebhogayata/visual-question-answering" target="_blank"
                     data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-github"></i></a>
@@ -952,28 +990,21 @@ of each drug container to estimate the degradation of the drug.
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
-          <a aria-label="Call Varad" data-position="top" data-tooltip="Call Varad"
+          <a aria-label="Call Nafiye" data-position="top" data-tooltip="Call Nafiye"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-phone"></i><a
-              aria-label="Call Varad">+14805722456</a></a>
+              aria-label="Call Nafiye">+14805722456</a></a>
         </p>
         <p>
-          <a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:vbhogayata@gmail.com"
-              class="hoverline">vbhogayata@gmail.com</a></a>
+          <a aria-label="Email Nafiye" href="mailto:nafiyemercan.14@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Nafiye" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email Nafiye" href="mailto:nafiyemercan.14@gmail.com"
+              class="hoverline">nafiyemercan.14@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="http://github.com/varadbhogayata" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
-            class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="http://github.com/varadbhogayata" class="hoverline"
-              target="_blank">github.com/varadbhogayata</a></a>
-        </p>
-        <p>
-          <a aria-label="View Varad on LinkedIn" href="https://www.linkedin.com/in/nafiyemercan/" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Nafiye on LinkedIn" href="https://www.linkedin.com/in/nafiyemercan/" target="_blank"
+            data-position="top" data-tooltip="View Nafiye on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/nafiyemercan/"
+              class="fa fa-linkedin"></i><a aria-label="Nafiye on LinkedIn" href="https://www.linkedin.com/in/nafiyemercan/"
               class="hoverline" target="_blank">linkedin.com/in/nafiyemercan</a></a>
         </p>
       </div>
@@ -984,7 +1015,7 @@ of each drug container to estimate the degradation of the drug.
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Organized", "Quick Learner", "Excellent Communicator", "Team Player", "Analytical"],
+      strings: ["Quick Learner", "Team Player"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
