--- a/index.html
+++ b/index.html
@@ -926,26 +926,13 @@ exchanging information with others.
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Arizona State University</a></span>
+                  <span class="card-title"><a href="https://www.asu.edu/" target="_blank" class="teal-text hoverline">Istanbul University</a></span>
                 </p>
-                <p class="brown-text">Tempe, USA</p>
+                <p class="brown-text">Istanbul, Turkey</p>
                 <p>
-                  <b>Degree: </b>Master of Science in Computer Science      
-                  <br>
-                  <b>CGPA: </b>4.0/4.0
-                </p>
-
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Distributed Database Systems</li>
-                    <li>Cloud Computing</li>
-                    <li>Foundations of Algorithms</li>                    
-                  </ul>
-                  </p>
-
-                </ul>
+				Started this second major to apply the knowledge I have gained about cultures and
+societies to my translation skills.
+</p>
               </div>
             </div>
 
@@ -955,29 +942,15 @@ exchanging information with others.
             <div class="card">
               <div class="card-content">
                 <p>
-                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">School of Engineering and Applied Science, Ahmedabad
-                      University</a></span>
+                  <span class="card-title"><a href="https://ahduni.edu.in/academics/schools-centres/school-of-engineering-and-applied-science/" target="_blank" class="teal-text hoverline">Istanbul University</a></span>
                 </p>
-                <p class="brown-text">Ahmedabad, India</p>
+                <p class="brown-text">Istanbul, Turkey</p>
                 <p>
-                  <b>Degree: </b>Bachelor of Technology in Information and Communication Technology
+                  <b>Degree: </b>BA Translation and Interpreting
                   <br>
-                  <b>CGPA: </b>3.13/4.33
+                  <b>GPA: </b>3.51
                 </p>
 
-                <ul>
-                  <p>
-                    <b>Relevant Courseworks:</b>
-                  <ul>
-                    <li>Data Structures and Algorithms</li>
-                    <li>Database Management Systems</li>
-                    <li>Operating Systems</li>
-                    <li>Machine Learning</li>
-                    <li>Computer Vision</li>
-                  </ul>
-                  </p>
-
-                </ul>
               </div>
             </div>
           </div>
